--- a/static/index.html
+++ b/static/index.html
@@ -291,11 +291,11 @@
             <div class="form-row">
                 <div class="form-group">
                     <label for="role">Job Role *</label>
-                    <input type="text" id="role" name="role" placeholder="e.g., Software Engineer" required>
+                    <input type="text" id="role" name="role" placeholder="e.g., Software Engineer" value="Software Engineer" required>
                 </div>
                 <div class="form-group">
                     <label for="company">Company *</label>
-                    <input type="text" id="company" name="company" placeholder="e.g., Google" required>
+                    <input type="text" id="company" name="company" placeholder="e.g., Google" value="Meta" required>
                 </div>
             </div>
 
